--- a/Arduino Remote/Arduino Remote/Source/Guidance/View/Guidance.storyboard
+++ b/Arduino Remote/Arduino Remote/Source/Guidance/View/Guidance.storyboard
@@ -4,8 +4,10 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -54,16 +56,61 @@
             <objects>
                 <viewController storyboardIdentifier="ButtonEditViewController" id="X3K-P4-N8F" customClass="ButtonEditViewController" customModule="Arduino_Remote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cY8-n9-hOP">
-                        <rect key="frame" x="0.0" y="0.0" width="419" height="297"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPx-Au-Psk">
+                                <rect key="frame" x="0.0" y="0.0" width="87" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="CjF-Vr-3hy"/>
+                                </constraints>
+                            </pickerView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="clO-43-Jc4">
+                                <rect key="frame" x="160" y="32" width="128" height="96"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="wq9-e8-Xbv">
+                                        <rect key="frame" x="3.6666666666666572" y="0.0" width="121" height="32"/>
+                                        <segments>
+                                            <segment title="Push"/>
+                                            <segment title="Switch"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9B-bJ-uSX">
+                                        <rect key="frame" x="32" y="56" width="64" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="crA-GE-SNh"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Delete">
+                                            <color key="titleColor" systemColor="systemRedColor"/>
+                                            <imageReference key="image" image="trash.fill" catalog="system" symbolScale="large" renderingMode="original" variableValue="1"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="regular"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="SwK-Ou-a9J"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="bPx-Au-Psk" secondAttribute="bottom" id="17H-N9-v6g"/>
+                            <constraint firstItem="clO-43-Jc4" firstAttribute="leading" secondItem="bPx-Au-Psk" secondAttribute="trailing" id="3Z9-u9-8In"/>
+                            <constraint firstItem="clO-43-Jc4" firstAttribute="top" secondItem="cY8-n9-hOP" secondAttribute="top" constant="32" id="ID6-by-0fB"/>
+                            <constraint firstItem="bPx-Au-Psk" firstAttribute="top" secondItem="cY8-n9-hOP" secondAttribute="top" id="Q62-IU-cVU"/>
+                            <constraint firstAttribute="bottom" secondItem="clO-43-Jc4" secondAttribute="bottom" constant="32" id="S3Z-iU-arL"/>
+                            <constraint firstAttribute="trailing" secondItem="clO-43-Jc4" secondAttribute="trailing" constant="32" id="eHk-SG-dqy"/>
+                            <constraint firstItem="bPx-Au-Psk" firstAttribute="leading" secondItem="SwK-Ou-a9J" secondAttribute="leading" id="rKu-6u-NFX"/>
+                        </constraints>
                     </view>
-                    <size key="freeformSize" width="419" height="297"/>
+                    <size key="freeformSize" width="320" height="160"/>
+                    <connections>
+                        <outlet property="pinPickerView" destination="bPx-Au-Psk" id="Puk-hD-Yb5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pSy-0v-4cj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1634.3511450381679" y="-223.94366197183101"/>
+            <point key="canvasLocation" x="1474.0458015267175" y="-187.67605633802819"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="q2Q-Rs-Wny">
@@ -86,6 +133,7 @@
     </scenes>
     <resources>
         <image name="play.fill" catalog="system" width="117" height="128"/>
+        <image name="trash.fill" catalog="system" width="117" height="128"/>
         <namedColor name="Dark Midnight Blue">
             <color red="0.0" green="0.12156863510608673" blue="0.16862747073173523" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -94,6 +142,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
