--- a/Arduino Remote/Arduino Remote/Source/Guidance/View/Guidance.storyboard
+++ b/Arduino Remote/Arduino Remote/Source/Guidance/View/Guidance.storyboard
@@ -60,7 +60,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPx-Au-Psk">
-                                <rect key="frame" x="0.0" y="0.0" width="87" height="160"/>
+                                <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="CjF-Vr-3hy"/>
                                 </constraints>
@@ -87,6 +87,9 @@
                                             <imageReference key="image" image="trash.fill" catalog="system" symbolScale="large" renderingMode="original" variableValue="1"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="regular"/>
                                         </state>
+                                        <connections>
+                                            <action selector="deleteButtonTapped:" destination="X3K-P4-N8F" eventType="touchUpInside" id="ynM-1j-X1g"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -106,6 +109,7 @@
                     <size key="freeformSize" width="320" height="160"/>
                     <connections>
                         <outlet property="pinPickerView" destination="bPx-Au-Psk" id="Puk-hD-Yb5"/>
+                        <outlet property="segmentedViewController" destination="wq9-e8-Xbv" id="z8E-Xo-ZkS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pSy-0v-4cj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -144,7 +148,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
