--- a/Arduino Remote/Arduino Remote/Source/Scheme/View/Scheme.storyboard
+++ b/Arduino Remote/Arduino Remote/Source/Scheme/View/Scheme.storyboard
@@ -12,10 +12,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Guidance View Controller-->
+        <!--Scheme View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="GuidanceViewController" id="Y6W-OH-hqX" customClass="GuidanceViewController" customModule="Arduino_Remote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SchemeViewController" id="Y6W-OH-hqX" customClass="SchemeViewController" customModule="Arduino_Remote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -148,7 +148,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
