--- a/Arduino Remote/Arduino Remote/Source/IPFetcher/IPInputView.storyboard
+++ b/Arduino Remote/Arduino Remote/Source/IPFetcher/IPInputView.storyboard
@@ -23,6 +23,7 @@
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zp1-m9-Zb5">
                                         <rect key="frame" x="20" y="698" width="353" height="45"/>
                                         <color key="backgroundColor" name="Medium Sky Blue"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="enter-ip-address-button"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="TUS-zI-yrA"/>
                                         </constraints>
@@ -40,6 +41,7 @@
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="192.168." placeholder="192.168.X.XXX" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="PfV-iT-HQT">
                                         <rect key="frame" x="20" y="198" width="353" height="32"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="ip-address-text-field"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="26"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="go"/>
