--- a/Arduino Remote/Arduino Remote/Source/SchemesList/View/SchemesList.storyboard
+++ b/Arduino Remote/Arduino Remote/Source/SchemesList/View/SchemesList.storyboard
@@ -31,6 +31,7 @@
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="List name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0aI-WW-f4N">
                                                     <rect key="frame" x="40" y="13" width="321" height="24"/>
+                                                    <accessibility key="accessibilityConfiguration" identifier="scheme-list-item-label"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -54,6 +55,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="scheme-list-item">
+                                            <bool key="isElement" value="YES"/>
+                                        </accessibility>
                                         <connections>
                                             <outlet property="nameLabel" destination="0aI-WW-f4N" id="BN2-qh-jMR"/>
                                         </connections>
